--- a/index.html
+++ b/index.html
@@ -21,6 +21,24 @@
       <h3 style="flex-basis: 100%; text-align: center">
         Isla de la Juventud, un Paraiso Escondido.
       </h3>
+      <!-- spinner -->
+      <div
+        class="p-5 d-flex flex-column justify-content-center align-items-center"
+      >
+        <div class="spinner-border text-success" role="status">
+          <span class="sr-only">Loading...</span>
+        </div>
+        <div class="small pt-2 text-success">Loading…</div>
+      </div>
+      <!-- END spinner -->
     </figure>
+    <div
+      class="p-5 d-flex flex-column justify-content-center align-items-center"
+    >
+      <div class="spinner-border text-success" role="status">
+        <span class="sr-only">Loading...</span>
+      </div>
+      <div class="small pt-2 text-success">Loading…</div>
+    </div>
   </body>
 </html>
