--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     <link rel="icon" type="image/png" href="images/faviconX400.png" />
     <!-- Bootstrap core CSS -->
     <link href="bootstrap-5.0.2-dist/css/bootstrap.min.css" rel="stylesheet" />
-
+    <!-- fontawesome -->
     <link href="fontawesome-free-6.5.2-web/css/all.min.css" rel="stylesheet" />
   </head>
   <body>
-    <script language="JavaScript">
+    <script language="javascript">
       function go() {
         window.location.href = "menu.html";
       }
