update sig rutas turnat

--- a/turnat.html
+++ b/turnat.html
@@ -1,47 +1,39 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Turismo de Naturaleza</title>
+    <title>SIGRutasTurnat</title>
     <meta charset="utf-8" />
 
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="turnat/css/bootstrap.min.css"
-    />
+    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
 
     <!-- font-awesome -->
-    <link rel="stylesheet" type="text/css" href="turnat/css/font-awesome.css" />
+    <link rel="stylesheet" type="text/css" href="css/font-awesome.css" />
     <link
       rel="stylesheet"
       type="text/css"
-      href="turnat/dist/leaflet.awesome-markers.css"
+      href="dist/leaflet.awesome-markers.css"
     />
     <link
       media="all"
       rel="stylesheet"
       type="text/css"
-      href="turnat/css/materialdesignicons.css"
+      href="css/materialdesignicons.css"
     />
     <link
       media="all"
       rel="stylesheet"
       type="text/css"
-      href="turnat/css/materialdesignicons.min.css"
+      href="css/materialdesignicons.min.css"
     />
 
-    <link rel="stylesheet" type="text/css" href="turnat/leaflet/leaflet.css" />
-    <link rel="stylesheet" type="text/css" href="turnat/css/own_style.css" />
+    <link rel="stylesheet" type="text/css" href="leaflet/leaflet.css" />
+    <link rel="stylesheet" type="text/css" href="css/own_style.css" />
+    <link rel="stylesheet" type="text/css" href="css/L.Control.Sidebar.css" />
+    <link rel="stylesheet" type="text/css" href="css/easy-button.css" />
     <link
       rel="stylesheet"
       type="text/css"
-      href="turnat/css/L.Control.Sidebar.css"
-    />
-    <link rel="stylesheet" type="text/css" href="turnat/css/easy-button.css" />
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="turnat/fullscreen/leaflet.fullscreen.css"
+      href="fullscreen/leaflet.fullscreen.css"
     />
 
     <style type="text/css">
@@ -112,18 +104,19 @@
       <div id="contactos"></div>
     </div>
 
-    <script src="turnat/leaflet/leaflet.js"></script>
-    <script src="turnat/js/leaflet-hash.js"></script>
-    <script src="turnat/js/Autolinker.min.js"></script>
-    <script src="turnat/plugin/L.Polyline.SnakeAnim.js"></script>
-    <script src="turnat/plugin/L.Control.Sidebar.js"></script>
-    <script src="turnat/plugin/easy-button.js"></script>
-    <script src="turnat/fullscreen/Leaflet.fullscreen.min.js"></script>
+    <script src="leaflet/leaflet.js"></script>
+    <script src="js/leaflet-hash.js"></script>
+    <script src="js/Autolinker.min.js"></script>
+    <script src="plugin/L.Polyline.SnakeAnim.js"></script>
+    <script src="plugin/L.Control.Sidebar.js"></script>
+    <script src="plugin/easy-button.js"></script>
+    <script src="fullscreen/Leaflet.fullscreen.min.js"></script>
     <!-- awesome -->
-    <script src="turnat/dist/leaflet.awesome-markers.js"></script>
+    <script src="dist/leaflet.awesome-markers.js"></script>
 
-    <script src="turnat/data/exp_paradastodas.js"></script>
-    <script src="turnat/data/exp_rutas.js"></script>
-    <script src="turnat/data/Controlador.js"></script>
+    <script src="data/exp_paradastodas.js"></script>
+    <script src="data/exp_rutas.js"></script>
+    <script src="data/entrepinos.js"></script>
+    <script src="data/Controlador.js"></script>
   </body>
 </html>
