--- a/menu.html
+++ b/menu.html
@@ -591,9 +591,12 @@
                     >Efemérides</a
                   >
                 </li>
-                <!-- <li>
+                <li>
                   <a class="link-secondary" href="biografia.html">Biografía</a>
-                </li> -->
+                </li>
+                <li>
+                  <a class="link-secondary" href="turnat.html">TURNAT</a>
+                </li>
               </ul>
             </div>
             <!--  -->
@@ -605,7 +608,11 @@
                 <li>
                   <a class="link-secondary" href="autor.html">Autor</a>
                 </li>
-                <li><a class="link-secondary" href="#">Contáctenos</a></li>
+                <li>
+                  <a class="link-secondary" href="contactenos.html"
+                    >Contáctenos</a
+                  >
+                </li>
                 <li><a class="link-secondary" href="#">Terminos de uso</a></li>
               </ul>
             </div>
