--- a/menu.html
+++ b/menu.html
@@ -613,7 +613,11 @@
                     >Contáctenos</a
                   >
                 </li>
-                <li><a class="link-secondary" href="#">Terminos de uso</a></li>
+                <li>
+                  <a class="link-secondary" href="license.html"
+                    >Terminos de uso</a
+                  >
+                </li>
               </ul>
             </div>
             <!--  -->
