--- a/index.html
+++ b/index.html
@@ -38,6 +38,13 @@
           <div class="small pt-2 text-dark">Cargando…</div>
         </div>
       </div>
+      <footer class="mt-auto text-white-50">
+        <p>
+          Cover template for
+          <a href="https://getbootstrap.com/" class="text-white">Bootstrap</a>,
+          by <a href="https://twitter.com/mdo" class="text-white">@mdo</a>.
+        </p>
+      </footer>
     </figure>
     <script src="bootstrap-5.0.2-dist/js/bootstrap.bundle.min.js"></script>
   </body>
