update apostol primero

--- a/menu.html
+++ b/menu.html
@@ -311,7 +311,46 @@
             <span class="visually-hidden">Siguiente</span>
           </button>
         </div>
-        <!-- container -->
+        <!-- container apostol-->
+        <div class="container px-4 py-5" id="featured-3">
+          <h2 class="pb-2 border-bottom">
+            Martí, biodiversidad y ciencia en las áreas protegidas:
+          </h2>
+          <div class="row g-4 py-5 row-cols-1 row-cols-lg-1">
+            <div class="col-md-10">
+              <div
+                class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative"
+              >
+                <div class="col p-4 d-flex flex-column position-static">
+                  <strong class="d-inline-block mb-2 text-primary"
+                    >Apostol</strong
+                  >
+                  <h3 class="mb-0">José Martí</h3>
+                  <div class="mb-1 text-muted">Junio 2025</div>
+                  <p class="card-text mb-auto">
+                    This is a wider card with supporting text below as a natural
+                    lead-in to additional content.
+                  </p>
+                  <a href="apostol.html" class="stretched-link"
+                    >Continue leyendo</a
+                  >
+                </div>
+                <div class="col-auto d-none d-lg-block">
+                  <img
+                    src="images/apostol/restaurada.jpg"
+                    alt="Retrato de Martí"
+                    width="200"
+                    height="250"
+                    class="bd-placeholder-img"
+                    style="object-fit: cover"
+                  />
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="b-example-divider"></div>
+        <!-- container primero -->
         <div class="container px-4 py-5" id="featured-3">
           <h2 class="pb-2 border-bottom">
             Valoración Económica de Ecosistemas en Áreas Protegidas:
@@ -593,6 +632,9 @@
                 </li>
                 <li>
                   <a class="link-secondary" href="biografia.html">Biografía</a>
+                </li>
+                <li>
+                  <a class="link-secondary" href="apostol.html">Apostol</a>
                 </li>
                 <li>
                   <a class="link-secondary" href="turnat.html">TURNAT</a>
