--- a/menu.html
+++ b/menu.html
@@ -328,8 +328,9 @@
                   <h3 class="mb-0">José Martí</h3>
                   <div class="mb-1 text-muted">Junio 2025</div>
                   <p class="card-text mb-auto">
-                    This is a wider card with supporting text below as a natural
-                    lead-in to additional content.
+                    - Martí y la Naturaleza. - Áreas Protegidas y Comunidad. -
+                    Ciencia y Conservación. - Participa y Transforma. - Memoria
+                    y Futuro.
                   </p>
                   <a href="apostol.html" class="stretched-link"
                     >Continue leyendo</a
