--- a/menu.html
+++ b/menu.html
@@ -328,9 +328,11 @@
                   <h3 class="mb-0">José Martí</h3>
                   <div class="mb-1 text-muted">Junio 2025</div>
                   <p class="card-text mb-auto">
-                    - Martí y la Naturaleza. - Áreas Protegidas y Comunidad. -
-                    Ciencia y Conservación. - Participa y Transforma. - Memoria
-                    y Futuro.
+                    1. Martí y la Naturaleza.<br />
+                    2. Áreas Protegidas y Comunidad.<br />
+                    3. Ciencia y Conservación.<br />
+                    4. Participa y Transforma.<br />
+                    5. Memoria y Futuro.
                   </p>
                   <a href="apostol.html" class="stretched-link"
                     >Continue leyendo</a
