update apostol second

--- a/apostol.html
+++ b/apostol.html
@@ -277,8 +277,11 @@
             <div class="bd-example">
               <blockquote class="blockquote">
                 <p>
-                  Objetivo: Explorar el pensamiento martiano sobre la naturaleza
+                  <!-- Objetivo: Explorar el pensamiento martiano sobre la naturaleza
                   como valor espiritual, político y cultural.
+                  
+                  Contenido sugerido: Aquí ponemos las frases en fotos que te voy a mandar o 
+                  alguna que tu tengas. -->
                 </p>
               </blockquote>
             </div>
@@ -297,11 +300,11 @@
             <div class="bd-example">
               <blockquote class="blockquote">
                 <p>
-                  Objetivo: Mostrar cómo las áreas protegidas se alinean con la
+                  <!-- Objetivo: Mostrar cómo las áreas protegidas se alinean con la
                   visión martiana y su rol como espacios de participación y
                   cuidado colectivo. - Mapa dinámico de áreas protegidas. -
                   Relatos comunitarios en audio o video (testimonios, saberes
-                  locales).
+                  locales). -->
                 </p>
               </blockquote>
             </div>
@@ -319,12 +322,49 @@
             </div>
             <div class="bd-example">
               <blockquote class="blockquote">
+                <div>
+                  "Latido de la Tierra Custodiada"<br />
+                  <p>
+                    En la hondura del monte silente, <br />
+                    donde el yagrumo reza con su savia, <br />
+                    habla Martí con voz de claridades, <br />
+                    poeta-estrella en brújula de patria. <br />
+                  </p>
+                  <br />
+                  <p>
+                    La ciencia extiende sus alas serenas, <br />
+                    mide el pulso del bosque y del río, <br />
+                    con manos que observan sin herir la esencia, <br />
+                    y ojos que oyen lo que calla el rocío. <br />
+                  </p>
+                  <br />
+                  <p>
+                    Las áreas protegidas son promesas, <br />
+                    no solo mapas ni límites trazados: <br />
+                    son pactos vivos entre el hombre y la tierra, <br />
+                    donde el alma del mundo halla su cuidado. <br />
+                  </p>
+                  <br />
+                  <p>
+                    Allí la orquídea escribe su resistencia, <br />
+                    el colibrí defiende su derecho, <br />
+                    y cada especie lleva, entre silencio, <br />
+                    un verso oculto en su humilde pecho. <br />
+                  </p>
+                  <br />
+                  <p>
+                    Martí nos mira desde el sol naciente, <br />
+                    con ética de luz y fe radiante: <br />
+                    que ciencia y ternura no sean opuestos, <br />
+                    sino raíces del mismo instante.<br />
+                  </p>
+                </div>
                 <p>
-                  Objetivo: Visualizar la ciencia como herramienta martiana para
+                  <!-- Objetivo: Visualizar la ciencia como herramienta martiana para
                   el bien común y para preservar la biodiversidad. Infografías
                   de conceptos clave (biodiversidad,). Resultados científicos
                   explicados de forma clara. Experimentos o retos ciudadanos que
-                  inviten a la acción.
+                  inviten a la acción. -->
                 </p>
               </blockquote>
             </div>
@@ -338,16 +378,16 @@
           </div>
           <div>
             <div class="bd-example">
-              <p class="h1">Ciencia y Conservación.</p>
+              <p class="h1">Participa y Transforma.</p>
             </div>
             <div class="bd-example">
               <blockquote class="blockquote">
                 <p>
-                  Objetivo: Visualizar la ciencia como herramienta martiana para
-                  el bien común y para preservar la biodiversidad. Infografías
-                  de conceptos clave (biodiversidad,). Resultados científicos
-                  explicados de forma clara. Experimentos o retos ciudadanos que
-                  inviten a la acción.
+                  <!-- Objetivo: Invitar al usuario a convertirse en protagonista del
+                  cambio. Herramientas: - Módulo para registrar ideas o
+                  proyectos locales. - Espacio de descarga de materiales
+                  educativos. - Foro moderado para compartir experiencias y
+                  preguntas. -->
                 </p>
               </blockquote>
             </div>
@@ -361,39 +401,43 @@
           </div>
           <div>
             <div class="bd-example">
-              <p class="h1">Participa y Transforma.</p>
+              <p class="h1">Memoria y Futuro.</p>
             </div>
             <div class="bd-example">
               <blockquote class="blockquote">
+                <div>
+                  <p>
+                    1. “La naturaleza es escuela de ternura y sabiduría.”<br />
+                  </p>
+                  <p>
+                    Refuerza el valor formativo de la naturaleza como medio para
+                    cultivar sensibilidad, ética y conocimiento.
+                  </p>
+                  <p>
+                    2. “La patria es ara y no pedestal; se le sirve, pero no se
+                    le sube.”<br />
+                  </p>
+
+                  <p>
+                    Aunque no menciona directamente la naturaleza, puedes usarla
+                    en el contexto de servicio a la tierra como parte del amor
+                    patrio.
+                  </p>
+                  <p>
+                    3. “El hombre está en la obligación de no destruir lo que no
+                    puede crear.”<br />
+                  </p>
+                  <p>
+                    Ideal para destacar principios de conservación y respeto
+                    ecológico.
+                  </p>
+                </div>
                 <p>
-                  Objetivo: Invitar al usuario a convertirse en protagonista del
-                  cambio. Herramientas: - Módulo para registrar ideas o
-                  proyectos locales. - Espacio de descarga de materiales
-                  educativos. - Foro moderado para compartir experiencias y
-                  preguntas.
-                </p>
-              </blockquote>
-            </div>
-          </div>
-        </article>
-        <article class="my-3" id="fifthtext">
-          <div
-            class="bd-heading sticky-xl-top align-self-start mt-5 mb-3 mt-xl-0 mb-xl-2"
-          >
-            <h3>Información</h3>
-          </div>
-          <div>
-            <div class="bd-example">
-              <p class="h1">Memoria y Futuro</p>
-            </div>
-            <div class="bd-example">
-              <blockquote class="blockquote">
-                <p>
-                  Objetivo: Cerrar el recorrido con una visión esperanzadora,
+                  <!-- Objetivo: Cerrar el recorrido con una visión esperanzadora,
                   conectando el legado de Martí con las generaciones futuras.
                   Propuesta: - Mural digital con ilustraciones, frases y nombres
                   de contribuyentes al sitio. - Calendario de eventos o acciones
-                  ambientales.
+                  ambientales. -->
                 </p>
               </blockquote>
             </div>
