update apostol tres

--- a/apostol.html
+++ b/apostol.html
@@ -205,6 +205,27 @@
                   >Información</a
                 >
               </li>
+              <li>
+                <a
+                  class="d-inline-flex align-items-center rounded"
+                  href="#fourthtext"
+                  >Información</a
+                >
+              </li>
+              <li>
+                <a
+                  class="d-inline-flex align-items-center rounded"
+                  href="#fifthtext"
+                  >Información</a
+                >
+              </li>
+              <li>
+                <a
+                  class="d-inline-flex align-items-center rounded"
+                  href="#seventhtext"
+                  >Información</a
+                >
+              </li>
             </ul>
           </li>
         </ul>
@@ -279,7 +300,7 @@
                 <p>
                   <!-- Objetivo: Explorar el pensamiento martiano sobre la naturaleza
                   como valor espiritual, político y cultural.
-                  
+
                   Contenido sugerido: Aquí ponemos las frases en fotos que te voy a mandar o 
                   alguna que tu tengas. -->
                 </p>
@@ -430,6 +451,28 @@
                   <p>
                     Ideal para destacar principios de conservación y respeto
                     ecológico.
+                  </p>
+                  <p>
+                    4. “El sol tiene manchas. Los desagradecidos no hablan más
+                    que de las manchas. Los agradecidos hablan de la luz.”
+                    <br />
+                  </p>
+                  <p>
+                    Útil para introducir la idea del aprecio profundo por lo que
+                    ofrece la naturaleza, pese a sus desafíos.
+                  </p>
+                  <p>5. “La naturaleza inspira, enseña y ennoblece.” <br /></p>
+                  <p>
+                    Sintetiza de forma clara el enfoque educativo y ético que
+                    puedes subrayar en tu sitio.
+                  </p>
+                  <p>
+                    6. “Hágase la luz en la mente antes de hacerla en el cielo.”
+                    <br />
+                  </p>
+                  <p>
+                    Puedes interpretarla como un llamado a la ciencia y al
+                    conocimiento como guía para la acción ambiental.
                   </p>
                 </div>
                 <p>
