--- a/apostol.html
+++ b/apostol.html
@@ -285,6 +285,8 @@
             </div>
           </div>
         </article>
+        <hr class="my-5" />
+        <!-- secondtext -->
         <article class="my-3" id="secondtext">
           <div
             class="bd-heading sticky-xl-top align-self-start mt-5 mb-3 mt-xl-0 mb-xl-2"
@@ -294,7 +296,182 @@
           <div>
             <div class="bd-example">
               <p class="h1">Martí y la Naturaleza.</p>
+              <!-- <text class="h5"
+                >“La naturaleza es escuela de ternura y sabiduría.”</text
+              > -->
             </div>
+            <div class="row" data-masonry='{"percentPosition": true }'>
+              <div class="col-sm-6 col-lg-4 mb-4">
+                <div class="card">
+                  <img
+                    src="images/apostol/FB_IMG_15914199700474704.jpg"
+                    alt="José Martí"
+                    class="img-fluid rounded"
+                    width="100%"
+                    height="200"
+                    aria-label="Placeholder: Image cap"
+                    preserveAspectRatio="xMidYMid slice"
+                    focusable="false"
+                  />
+
+                  <div class="card-body">
+                    <h5 class="card-title">José Martí</h5>
+                    <!-- <p class="card-text">.</p> -->
+                  </div>
+                </div>
+              </div>
+              <div class="col-sm-6 col-lg-4 mb-4">
+                <div class="card p-3">
+                  <figure class="p-3 mb-0">
+                    <blockquote class="blockquote">
+                      <p>“La naturaleza es escuela de ternura y sabiduría.”</p>
+                    </blockquote>
+                    <figcaption
+                      class="blockquote-footer mb-0 text-muted text-end"
+                    >
+                      José Martí
+                      <!-- <cite title="Source Title">poesías.</cite> -->
+                    </figcaption>
+                  </figure>
+                </div>
+              </div>
+              <div class="col-sm-6 col-lg-4 mb-4">
+                <div class="card">
+                  <img
+                    src="images/apostol/FB_IMG_15914199513498620.jpg"
+                    alt="José Martí"
+                    class="img-fluid rounded"
+                    width="100%"
+                    height="200"
+                    aria-label="Placeholder: Image cap"
+                    preserveAspectRatio="xMidYMid slice"
+                    focusable="false"
+                  />
+
+                  <div class="card-body">
+                    <h5 class="card-title">José Martí</h5>
+                    <!-- <p class="card-text">.</p> -->
+                  </div>
+                </div>
+              </div>
+              <!-- 222 -->
+              <div class="col-sm-6 col-lg-4 mb-4">
+                <div class="card">
+                  <img
+                    src="images/apostol/FB_IMG_15914199796500823.jpg"
+                    alt="José Martí"
+                    class="img-fluid rounded"
+                    width="100%"
+                    height="200"
+                    aria-label="Placeholder: Image cap"
+                    preserveAspectRatio="xMidYMid slice"
+                    focusable="false"
+                  />
+
+                  <div class="card-body">
+                    <h5 class="card-title">José Martí</h5>
+                    <!-- <p class="card-text">.</p> -->
+                  </div>
+                </div>
+              </div>
+              <div class="col-sm-6 col-lg-4 mb-4">
+                <div class="card">
+                  <img
+                    src="images/apostol/FB_IMG_15914199954431069.jpg"
+                    alt="José Martí"
+                    class="img-fluid rounded"
+                    width="100%"
+                    height="200"
+                    aria-label="Placeholder: Image cap"
+                    preserveAspectRatio="xMidYMid slice"
+                    focusable="false"
+                  />
+
+                  <div class="card-body">
+                    <h5 class="card-title">José Martí</h5>
+                    <!-- <p class="card-text">.</p> -->
+                  </div>
+                </div>
+              </div>
+              <div class="col-sm-6 col-lg-4 mb-4">
+                <div class="card">
+                  <img
+                    src="images/apostol/FB_IMG_15914199875309044.jpg"
+                    alt="José Martí"
+                    class="img-fluid rounded"
+                    width="100%"
+                    height="200"
+                    aria-label="Placeholder: Image cap"
+                    preserveAspectRatio="xMidYMid slice"
+                    focusable="false"
+                  />
+
+                  <div class="card-body">
+                    <h5 class="card-title">José Martí</h5>
+                    <!-- <p class="card-text">.</p> -->
+                  </div>
+                </div>
+              </div>
+              <!-- 333 -->
+              <div class="col-sm-6 col-lg-4 mb-4">
+                <div class="card">
+                  <img
+                    src="images/apostol/FB_IMG_15914199298700870.jpg"
+                    alt="José Martí"
+                    class="img-fluid rounded"
+                    width="100%"
+                    height="200"
+                    aria-label="Placeholder: Image cap"
+                    preserveAspectRatio="xMidYMid slice"
+                    focusable="false"
+                  />
+
+                  <div class="card-body">
+                    <h5 class="card-title">José Martí</h5>
+                    <!-- <p class="card-text">.</p> -->
+                  </div>
+                </div>
+              </div>
+              <div class="col-sm-6 col-lg-4 mb-4">
+                <div class="card">
+                  <img
+                    src="images/apostol/FB_IMG_15914198679275171.jpg"
+                    alt="José Martí"
+                    class="img-fluid rounded"
+                    width="100%"
+                    height="200"
+                    aria-label="Placeholder: Image cap"
+                    preserveAspectRatio="xMidYMid slice"
+                    focusable="false"
+                  />
+
+                  <div class="card-body">
+                    <h5 class="card-title">José Martí</h5>
+                    <!-- <p class="card-text">.</p> -->
+                  </div>
+                </div>
+              </div>
+              <div class="col-sm-6 col-lg-4 mb-4">
+                <div class="card">
+                  <img
+                    src="images/apostol/FB_IMG_15914199150490098.jpg"
+                    alt="José Martí"
+                    class="img-fluid rounded"
+                    width="100%"
+                    height="200"
+                    aria-label="Placeholder: Image cap"
+                    preserveAspectRatio="xMidYMid slice"
+                    focusable="false"
+                  />
+
+                  <div class="card-body">
+                    <h5 class="card-title">José Martí</h5>
+                    <!-- <p class="card-text">.</p> -->
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- fin -->
             <div class="bd-example">
               <blockquote class="blockquote">
                 <p>
