--- a/apostol.html
+++ b/apostol.html
@@ -279,7 +279,7 @@
               />
               <blockquote class="blockquote">
                 <p>
-                  <em><strong>José Martí </strong></em>
+                  <em><strong>José Julián Martí Pérez </strong></em>
                 </p>
               </blockquote>
             </div>
@@ -291,7 +291,7 @@
           <div
             class="bd-heading sticky-xl-top align-self-start mt-5 mb-3 mt-xl-0 mb-xl-2"
           >
-            <h3>Información</h3>
+            <h3>»</h3>
           </div>
           <div>
             <div class="bd-example">
@@ -488,7 +488,7 @@
           <div
             class="bd-heading sticky-xl-top align-self-start mt-5 mb-3 mt-xl-0 mb-xl-2"
           >
-            <h3>Información</h3>
+            <h3>»</h3>
           </div>
           <div>
             <div class="bd-example">
@@ -511,7 +511,7 @@
           <div
             class="bd-heading sticky-xl-top align-self-start mt-5 mb-3 mt-xl-0 mb-xl-2"
           >
-            <h3>Información</h3>
+            <h3>»</h3>
           </div>
           <div>
             <div class="bd-example">
@@ -571,7 +571,7 @@
           <div
             class="bd-heading sticky-xl-top align-self-start mt-5 mb-3 mt-xl-0 mb-xl-2"
           >
-            <h3>Información</h3>
+            <h3>»</h3>
           </div>
           <div>
             <div class="bd-example">
@@ -594,7 +594,7 @@
           <div
             class="bd-heading sticky-xl-top align-self-start mt-5 mb-3 mt-xl-0 mb-xl-2"
           >
-            <h3>Información</h3>
+            <h3>»</h3>
           </div>
           <div>
             <div class="bd-example">
