add start and stop server

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
     </script>
     <figure class="fondo" onclick="go()">
       <h3 style="flex-basis: 100%; text-align: center">
-        <!-- Isla de la Juventud, un Paraiso Escondido. -->
-        “La naturaleza inspira, enseña y ennoblece.” José Martí
+        Isla de la Juventud, un Paraiso Escondido.
+        <!-- “La naturaleza inspira, enseña y ennoblece.” José Martí -->
       </h3>
 
       <div
