--- a/bosques.html
+++ b/bosques.html
@@ -358,6 +358,142 @@
     </div>
 
     <!--  -->
+
+    <!--  -->
+
+    <div class="b-example-divider"></div>
+    <!-- footer -->
+    <footer class="container py-5">
+      <div class="row">
+        <!--  -->
+        <div class="col-4 col-md">
+          <!-- <i class="fas fa-home"></i> -->
+          <h4 class="fw-bold mb-0">Sitios de interés</h4>
+          <ul class="list-unstyled text-small">
+            <li>
+              <a
+                class="link-secondary"
+                href="https://www.citma.gob.cu/"
+                title="CITMA"
+                >CITMA</a
+              >
+            </li>
+            <li>
+              <a
+                class="link-secondary"
+                href="https://idevida.geocuba.cu/"
+                title="IDE de la Tarea Vida"
+                >IDE Vida</a
+              >
+            </li>
+            <li>
+              <a
+                class="link-secondary"
+                href="https://idevida.geocuba.cu/visorij"
+                title="Visor de mapas"
+                >Visor de mapas</a
+              >
+            </li>
+            <li>
+              <a
+                class="link-secondary"
+                href="https://www.uij.edu.cu/"
+                title="Universidad Jesús Montané Oropesa MEIJ"
+                >Universidad Jesús Montané O.</a
+              >
+            </li>
+            <li>
+              <a
+                class="link-secondary"
+                href="https://www.redisla.gob.cu/es/"
+                title="Portal del Ciudadano"
+                >Portal del Ciudadano</a
+              >
+            </li>
+          </ul>
+        </div>
+        <!--  -->
+        <div class="col-4 col-md">
+          <!-- <i class="fas fa-calendar"></i> -->
+          <h4 class="fw-bold mb-0">Recursos</h4>
+          <ul class="list-unstyled text-small">
+            <!-- <li><a class="link-secondary" href="frases.html">Frases</a></li> -->
+            <li>
+              <a
+                class="link-secondary"
+                href="efemerides.html"
+                title="Efemérides"
+                >Efemérides</a
+              >
+            </li>
+            <li>
+              <a class="link-secondary" href="biografia.html" title="Biografía"
+                >Biografía</a
+              >
+            </li>
+            <li>
+              <a class="link-secondary" href="apostol.html" title="Apostol"
+                >Apostol</a
+              >
+            </li>
+            <li>
+              <a class="link-secondary" href="turnat.html" title="TURNAT"
+                >TURNAT</a
+              >
+            </li>
+          </ul>
+        </div>
+        <!--  -->
+        <div class="col-4 col-md">
+          <!-- <i class="fas fa-book-open"></i> -->
+          <h4 class="fw-bold mb-0">Acerca de</h4>
+          <ul class="list-unstyled text-small">
+            <!-- <li><a class="link-secondary" href="ayuda.html">Ayuda</a></li> -->
+            <li>
+              <a class="link-secondary" href="autor.html" title="Autores"
+                >Autores</a
+              >
+            </li>
+            <li>
+              <a
+                class="link-secondary"
+                href="contactenos.html"
+                title="Contáctenos"
+                >Contáctenos</a
+              >
+            </li>
+            <li>
+              <a
+                class="link-secondary"
+                href="license.html"
+                title="Terminos de uso"
+                >Terminos de uso</a
+              >
+            </li>
+          </ul>
+        </div>
+        <!--  -->
+        <div class="col-12 col-md d-flex">
+          <img
+            src="images/faviconX400.png"
+            alt="Bootstrap"
+            width="32"
+            height="32"
+          />
+          <small class="d-block mb-3 text-muted"
+            >&copy; 2024 Tarea Vida. &middot;</small
+          >
+          <a href="#">Privacidad</a> &middot;
+          <a href="#">Términos de Uso</a>
+
+          <!-- <p class="float-end">
+                <i class="fas fa-arrow-circle-up" style="font-size: 3em"></i>
+              </p> -->
+        </div>
+      </div>
+    </footer>
+    <!-- end -->
+
     <script src="bootstrap-5.0.2-dist/js/bootstrap.bundle.min.js"></script>
 
     <script src="js/cheatsheet.js"></script>
