--- a/menu.html
+++ b/menu.html
@@ -592,31 +592,42 @@
               <h4 class="fw-bold mb-0">Sitios de interés</h4>
               <ul class="list-unstyled text-small">
                 <li>
-                  <a class="link-secondary" href="https://www.citma.gob.cu/"
+                  <a
+                    class="link-secondary"
+                    href="https://www.citma.gob.cu/"
+                    title="CITMA"
                     >CITMA</a
                   >
                 </li>
                 <li>
-                  <a class="link-secondary" href="https://idevida.geocuba.cu/"
-                    >IDE de la Tarea Vida</a
+                  <a
+                    class="link-secondary"
+                    href="https://idevida.geocuba.cu/"
+                    title="IDE de la Tarea Vida"
+                    >IDE Vida</a
                   >
                 </li>
                 <li>
                   <a
                     class="link-secondary"
                     href="https://idevida.geocuba.cu/visorij"
+                    title="Visor de mapas"
                     >Visor de mapas</a
                   >
                 </li>
                 <li>
-                  <a class="link-secondary" href="https://www.uij.edu.cu/"
-                    >Universidad "Jesús Montané Oropesa"</a
+                  <a
+                    class="link-secondary"
+                    href="https://www.uij.edu.cu/"
+                    title="Universidad Jesús Montané Oropesa MEIJ"
+                    >Universidad Jesús Montané O.</a
                   >
                 </li>
                 <li>
                   <a
                     class="link-secondary"
                     href="https://www.redisla.gob.cu/es/"
+                    title="Portal del Ciudadano"
                     >Portal del Ciudadano</a
                   >
                 </li>
@@ -629,18 +640,30 @@
               <ul class="list-unstyled text-small">
                 <!-- <li><a class="link-secondary" href="frases.html">Frases</a></li> -->
                 <li>
-                  <a class="link-secondary" href="efemerides.html"
+                  <a
+                    class="link-secondary"
+                    href="efemerides.html"
+                    title="Efemérides"
                     >Efemérides</a
                   >
                 </li>
                 <li>
-                  <a class="link-secondary" href="biografia.html">Biografía</a>
+                  <a
+                    class="link-secondary"
+                    href="biografia.html"
+                    title="Biografía"
+                    >Biografía</a
+                  >
                 </li>
                 <li>
-                  <a class="link-secondary" href="apostol.html">Apostol</a>
+                  <a class="link-secondary" href="apostol.html" title="Apostol"
+                    >Apostol</a
+                  >
                 </li>
                 <li>
-                  <a class="link-secondary" href="turnat.html">TURNAT</a>
+                  <a class="link-secondary" href="turnat.html" title="TURNAT"
+                    >TURNAT</a
+                  >
                 </li>
               </ul>
             </div>
@@ -651,15 +674,23 @@
               <ul class="list-unstyled text-small">
                 <!-- <li><a class="link-secondary" href="ayuda.html">Ayuda</a></li> -->
                 <li>
-                  <a class="link-secondary" href="autor.html">Autor</a>
+                  <a class="link-secondary" href="autor.html" title="Autores"
+                    >Autores</a
+                  >
                 </li>
                 <li>
-                  <a class="link-secondary" href="contactenos.html"
+                  <a
+                    class="link-secondary"
+                    href="contactenos.html"
+                    title="Contáctenos"
                     >Contáctenos</a
                   >
                 </li>
                 <li>
-                  <a class="link-secondary" href="license.html"
+                  <a
+                    class="link-secondary"
+                    href="license.html"
+                    title="Terminos de uso"
                     >Terminos de uso</a
                   >
                 </li>
